lldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: lldap
  labels:
    app: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      volumes:
        - name: lldap-data
          persistentVolumeClaim:
            claimName: lldap-data
      containers:
        - name: lldap
          image: lldap/lldap:stable
          ports:
            - containerPort: 3890
              name: ldap
            - containerPort: 17170
              name: web
          volumeMounts:
            - mountPath: /data
              name: lldap-data
