lldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: lldap
spec:
  selector:
    app: lldap
  ports:
    - port: 3890
      targetPort: ldap
      name: ldap
    - port: 80
      targetPort: web
      name: web
