lldap/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap
  namespace: lldap
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ldap.lab53.net`)
      kind: Rule
      services:
        - name: lldap
          port: 80
  tls:
    certResolver: letsencrypt
